some further modifications

--- a/report.md.j2
+++ b/report.md.j2
@@ -1,15 +1,13 @@
-# `{{name}}` - Raport
-
-**Suma: {{points}}/7**
+**Suma: {{total}}/7**
 
 Testy:
 
 | Test                                                            | Punkty     |
 |-----------------------------------------------------------------|------------|
-| Testy poprawności współbieżnych rotacji.                        | {{pts[0]}} |
-| Testy poprawności współbieżnych operacji `rotate()` i `show()`. | {{pts[1]}} |
-| Testy poprawności współbieżnych operacji z przerwaniami.        | {{pts[2]}} |
-| Testy szybkości obsługi przerwań.                               | {{pts[3]}} |
-| Testy współbieżności wykonania operacji.                        | {{pts[4]}} |
-| Testy sekwencyjności operacji, które są w konflikcie.           | {{pts[5]}} |
-| Testy żywotności.                                               | {{pts[6]}} |
+| Testy poprawności współbieżnych rotacji.                        | {{points[0]}} |
+| Testy poprawności współbieżnych operacji `rotate()` i `show()`. | {{points[1]}} |
+| Testy poprawności współbieżnych operacji z przerwaniami.        | {{points[2]}} |
+| Testy szybkości obsługi przerwań.                               | {{points[3]}} |
+| Testy współbieżności wykonania operacji.                        | {{points[4]}} |
+| Testy sekwencyjności operacji, które są w konflikcie.           | {{points[5]}} |
+| Testy żywotności.                                               | {{points[6]}} |
